
<resources>
    <string name="app_name">Peli Cool App</string>

    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>

    <string name="movie_title">Movie Title</string>
    <string name="movie_image">Movie Image</string>
    <string name="overview">Overview</string>
    <string name="share">Share</string>
    <string name="bookmark">Bookmark</string>
    <string name="favourite">Favourite</string>
    <string name="movie_detail">Movie detail</string>
    <string name="movie_item">Movie_item</string>
    <string name="language">"Language "</string>
    <string name="reviews">Reviews</string>
    <string name="released">Released</string>
    <string name="homepage">Homepage</string>
    <string name="watch_trailer">watch trailer</string>
    <string name="similar">Similar</string>
    <string name="no_data">No Data</string>
    <string name="credits">Credits</string>
    <string name="no_data_for_description">No data for INFORMATION</string>
    <string name="no_data_for_credits">No data for CREDITS</string>
    <string name="no_data_for_similar_movies">No data for SIMILAR MOVIES</string>
    <string name="share_error">Failed to share</string>

    <string name="error_dialog">Error</string>
    <string name="error_dialog_detail">An error occurred while obtaining the information</string>
    <string name="retry">Retry</string>
    <string name="try_again">Try again</string>
    <string name="ok">OK</string>

    <string name="home">Home</string>
    <string name="gallery">Gallery</string>
    <string name="search">Search</string>
    <string name="search_no_results">No movies found</string>
    <string name="helper_search">Search a movie</string>
    <string name="the_most_wanted">The most wanted:</string>

    <string name="peli_cool_app">Peli Cool App</string>
    <string name="logo_splash">Logo splash</string>

    <string name="removed_movie">Removed from MY LIST</string>
    <string name="added_movie">Added to MY LIST</string>

    <string name="connection_restored">Connection has been restored</string>
    <string name="no_connection">No internet connection</string>
    <string name="rule_out">Rule Out</string>

    <string name="exit">Exit</string>

    <string name="not_found_error">¡Ups! We didn\'t find any movies.</string>
    <string name="service_unavailable_error">Ups! Service unavailable.</string>
    <string name="internal_server_error">Ups! An internal server error occurred.</string>
    <string name="invalid_request_error">Invalid request happened.</string>
    <string name="unauthorized_error">Unauthorized user.</string>
    <string name="unknown_error">Unknown error occurred.</string>
    <string name="connectivity_error">An error occurred while your request was executing.</string>
    <string name="internet_error">Please check your internet connection and try again.</string>
    <string name="error_message">Error Message</string>
    <string name="update">Update</string>
    <string name="press_again">Press back again to exit</string>

</resources>