<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/menu_gallery"
        android:icon="@drawable/ic_gallery"
        android:title="@string/gallery" />

    <item
        android:id="@+id/menu_bookmark"
        android:icon="@drawable/ic_bookmark_added"
        android:title="@string/bookmark" />

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/menu_exit"
        android:icon="@drawable/ic_logout"
        android:onClick="exitApp"
        android:title="@string/exit" />

</menu>