<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/menu_home">

    <fragment
        android:id="@+id/menu_home"
        android:name="com.moviemain.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_movieFragment_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/menu_gallery"
            app:destination="@id/menu_gallery"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/menu_bookmark"
            app:destination="@id/menu_bookmark"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/menu_search"
            app:destination="@id/menu_search"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>
    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.moviemain.ui.detail.DetailFragment"
        android:label="@string/movie_detail"
        tools:layout="@layout/fragment_detail">

        <action
            android:id="@+id/action_movieDetailFragment_to_similarDetailFragment"
            app:destination="@id/similarDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <argument
            android:name="movie"
            app:argType="com.moviemain.data.model.Movie" />
    </fragment>
    <fragment
        android:id="@+id/menu_gallery"
        android:name="com.moviemain.ui.gallery.GalleryFragment"
        android:label="@string/upcoming"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_galleryFragment_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/menu_bookmark"
        android:name="com.moviemain.ui.bookmark.BookmarkFragment"
        android:label="@string/bookmark"
        tools:layout="@layout/fragment_bookmark">
        <action
            android:id="@+id/action_menu_bookmark_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/menu_search"
        android:name="com.moviemain.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_menu_search_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/similarDetailFragment"
        android:name="com.moviemain.ui.detail.SimilarDetailFragment"
        android:label="@string/movie_detail"
        tools:layout="@layout/fragment_similar_detail" >
        <action
            android:id="@+id/action_similarDetailFragment_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <argument
            android:name="movie"
            app:argType="com.moviemain.data.model.Movie" />
    </fragment>
</navigation>