<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_dense"
    tools:context=".ui.MovieDetailFragment">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/common_margin_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_background"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/movie_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient" />
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="120dp"
        android:layout_height="170dp"
        android:layout_marginStart="@dimen/common_size_default"
        android:layout_marginBottom="@dimen/common_margin_min"
        android:clipToPadding="true"
        app:cardCornerRadius="@dimen/common_corner_min"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/img_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/movie_image" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="438dp" />

    <TextView
        android:id="@+id/txt_movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:textColor="@color/white"
        android:textSize="@dimen/common_size_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Movie Title" />

    <TextView
        android:id="@+id/txt_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_details"
        android:drawablePadding="@dimen/common_padding_min"
        android:gravity="center"
        android:textColor="@color/green_met"
        app:drawableStartCompat="@drawable/ic_star_border"
        app:drawableTint="@color/green_met"
        app:layout_constraintStart_toStartOf="@+id/txt_released"
        app:layout_constraintTop_toBottomOf="@id/frameLayout"
        tools:text="8.5 (5854 Reviews)" />


    <TextView
        android:id="@+id/txt_released"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_min"
        android:drawablePadding="@dimen/common_padding_min"
        android:gravity="center"
        android:textColor="@color/green_met"
        app:drawableStartCompat="@drawable/ic_calendar_month"
        app:drawableTint="@color/green_met"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/txt_rating"
        tools:text="2022-07-20 Released" />

    <TextView
        android:id="@+id/txt_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_min"
        android:drawablePadding="@dimen/common_padding_min"
        android:gravity="center"
        android:textColor="@color/green_met"
        app:drawableStartCompat="@drawable/ic_language"
        app:drawableTint="@color/green_met"
        app:layout_constraintStart_toStartOf="@+id/txt_released"
        app:layout_constraintTop_toBottomOf="@+id/txt_released"
        tools:text="Language en " />

    <View
        android:id="@+id/divider_line"
        android:layout_width="370dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/common_margin_default"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_padding_default"
        android:text="@string/overview"
        android:textColor="@color/white"
        android:textSize="@dimen/common_size_default"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="@dimen/common_margin_min"
        android:layout_marginStart="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin_default"
        android:layout_marginEnd="@dimen/common_margin_default"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_min"
        android:layout_marginHorizontal="@dimen/common_margin_default"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_border"
            android:contentDescription="@string/favourite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/favourite" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_min"
        android:layout_marginEnd="@dimen/common_margin_default"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            android:contentDescription="@string/share" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/share" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin_default"
        android:layout_marginTop="@dimen/common_margin_min"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bookmark_border"
            android:contentDescription="@string/bookmark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/bookmark" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="143dp" />

</androidx.constraintlayout.widget.ConstraintLayout>