<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_dense">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.detail.DetailFragment">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/common_margin_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_background"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/movie_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_margin_default"
            android:layout_marginTop="@dimen/common_margin_min"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintStart_toEndOf="@+id/linearLayout3"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            tools:ignore="UnknownId,UseCompoundDrawables">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/bookmark"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_add"
                app:rippleColor="@color/green_met"
                android:scaleY="0.8"
                android:scaleX="0.8"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookmark"
                android:textSize="@dimen/common_size_detail_attributes"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_min"
            android:layout_marginEnd="@dimen/common_margin_default"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            tools:ignore="UseCompoundDrawables">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/share"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_share"
                app:rippleColor="@color/green_met"
                android:scaleY="0.8"
                android:scaleX="0.8"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textSize="@dimen/common_size_detail_attributes"
                android:textColor="@color/white" />

        </LinearLayout>

<!--
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin_default"
            android:layout_marginTop="@dimen/common_margin_min"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/favourite"
                android:src="@drawable/ic_favorite_border" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favourite"
                android:textColor="@color/white" />

        </LinearLayout>
-->

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="120dp"
            android:layout_height="170dp"
            android:layout_marginStart="@dimen/common_margin_default"
            android:layout_marginBottom="@dimen/common_margin_min"
            android:clipToPadding="true"
            app:cardCornerRadius="@dimen/common_corner_min"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/img_movie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/movie_image"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="438dp" />

        <TextView
            android:id="@+id/txt_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/common_size_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Movie Title" />

        <TextView
            android:id="@+id/txt_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_min"
            android:drawablePadding="@dimen/common_padding_min"
            android:gravity="center"
            android:textSize="@dimen/common_size_detail_attributes"
            android:textColor="@color/green_met"
            app:drawableStartCompat="@drawable/ic_star_border"
            app:drawableTint="@color/green_met"
            app:layout_constraintStart_toStartOf="@+id/txt_released"
            app:layout_constraintTop_toBottomOf="@id/linearLayout2"
            tools:text="8.5 (5854 Reviews)" />


        <TextView
            android:id="@+id/txt_released"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_min"
            android:drawablePadding="@dimen/common_padding_min"
            android:gravity="center"
            android:textSize="@dimen/common_size_detail_attributes"
            android:textColor="@color/green_met"
            app:drawableStartCompat="@drawable/ic_calendar_month"
            app:drawableTint="@color/green_met"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/txt_rating"
            tools:text="2022-07-20 Released" />

        <TextView
            android:id="@+id/txt_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_min"
            android:drawablePadding="@dimen/common_padding_min"
            android:gravity="center"
            android:textSize="@dimen/common_size_detail_attributes"
            android:textColor="@color/green_met"
            app:drawableStartCompat="@drawable/ic_language"
            app:drawableTint="@color/green_met"
            app:layout_constraintStart_toStartOf="@+id/txt_released"
            app:layout_constraintTop_toBottomOf="@+id/txt_released"
            tools:text="Language en " />

        <View
            android:id="@+id/divider_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/common_margin_default"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_min"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:padding="@dimen/common_padding_default"
            android:text="@string/overview"
            android:textColor="@color/white"
            android:textSize="@dimen/common_size_default"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin_default"
            android:layout_marginEnd="@dimen/common_margin_default"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/common_size_detail_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="143dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>